modif menu responsive

--- a/assets/style.css
+++ b/assets/style.css
@@ -339,6 +339,24 @@ img {
   padding: 80px;
 }
 
+.icons-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px; /* Espacement entre les icônes */
+  flex-wrap: wrap;
+  padding: 20px;
+}
+
+.icons-container img {
+  width: 60px; /* Taille uniforme */
+  height: 60px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.icons-container img:hover {
+  transform: scale(1.2); /* Effet zoom au survol */
+}
+
 .service {
   margin-bottom: 50px;
 }
